--- a/Love/birthday.html
+++ b/Love/birthday.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<title>Our Love Story</title>
+	<embed src="./music/My Love.mp3" hidden="true" autostart="true" loop="true">
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<style type="text/css">
 		@font-face {
@@ -12,7 +13,7 @@
 	<link href="css/default.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/garden.js"></script>
-    <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="js/functions_dev.js"></script>
 </head>
 
 <body>
@@ -20,21 +21,31 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
-				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
+				<span class="space"/><span class="comments">* We are both Whuer, and I am a programmer.</span><br />
+				<span class="space"/><span class="comments">* so I write some code to celebrate your 24th birthday.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
-				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Guo Kai"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Chen Xi"</span>);<br />
+				<span class="comments">// March 29, 2016, I first met you and remembered your name. </span><br />
+				i.meet(u);<br />
+				<span class="comments">// April 6, 2016, I said hello to you on WebChat and you said hello to me. </span><br />
+				i.sayhello(u);<br />
+				<span class="comments">// April 8, 2016, I first hold your hand during rehearsal and felt so nervous. </span><br />
+				i.holdhand(u);<br />
+				<span class="comments">// April 10, 2016, We performed a perfect show and enjoyed happy all night. </span><br />
+				i.happy(u);<br />
+				<span class="comments">// April 30, 2016, I texted you I love you and knew your feeling to me. </span><br />
+				i.confession(u);<br />
+				<span class="comments">// May 3, 2016, I told you I love you after walking around Mountain Luojia several times and hold your hand again. </span><br />
 				i.love(u);<br />
-				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
+				<span class="comments">// Luckily, you accepted with a sweet smile and became my girlfriend eversince.</span><br />
 				u.accepted();<br />
-				<span class="comments">// Since then, I miss u every day.</span><br />
+				<span class="comments">// Since then, I know I am not alone and miss u everyday.</span><br />
 				i.miss(u);<br />
 				<span class="comments">// And take care of u and our love.</span><br />
 				i.takeCareOf(u);<br />
-				<span class="comments">// You say that you won't be so easy to marry me.</span><br />
-				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
+				<span class="comments">// You say that you have no idea how to have a long life with me and fear uncertain future sometimes.</span><br />
+				<span class="comments">// So I keep patience and I have confidence that you will find the answer.</span><br />
 				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br />
 				<span class="keyword">while</span> (isHesitate) {<br />
 				<span class="placeholder"/>i.waitFor(u);<br />
@@ -42,34 +53,36 @@
 				<span class="placeholder"/><span class="comments">// and you should think it over.</span><br />
 				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
 				}<br />
-				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br />
-				i.marry(u);<br />
-				i.liveHappilyWith(u);<br />
+				<span class="comments">// Someone say that company is the most long love,</span><br />
+				i.company(u);<br />
+				<span class="comments">// forever is the most romantic love.</span><br />
+				i.togetherWith(u);<br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Minyue, I have fallen in love with you for
+						Chen Xi, I have fallen in love with you for
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Love u forever and ever.<br/>
-						<div class="signature">- hackerzhou</div>
+						I am always be with u.<br/>
+						<div class="signature">- KayGuoWhu</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="copyright">
-			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
-			Copyright © 2011 <a href='http://hackerzhou.me'>hackerzhou.me</a> 2009-2011
-		</div>
+		
 	</div>
+	<!--<div id="copyright">
+			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project and <a href='http://hackerzhou.me'>hankerzhou.<br />
+			Thanks for your share!
+	</div>-->
 	<script type="text/javascript">
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2010, 10, 2);
+		together.setFullYear(2016, 4, 3);
 		together.setHours(20);
 		together.setMinutes(0);
 		together.setSeconds(0);
