--- a/index_birthday.html
+++ b/index_birthday.html
@@ -18,7 +18,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>情人节快乐，陈小曦!</title>
+    <title>Happy Birthday, Miss C!</title>
 	<!--<embed src="./music/Happy Birthday To You.mp3" hidden="true" autostart="true" loop="true">-->
 	
   </head>
@@ -29,14 +29,14 @@
 	<source src="./music/Happy Birthday To You.mp3" type="audio/mpeg">
 	<embed hidden="true" src="./music/Happy Birthday To You.mp3" autostart="true" loop="true"/>
 	</audio>-->
-	<audio src="./music/single dog.mp3" id="Jaudio" class="media-audio" autoplay preload loop="loop"></audio>
+	<audio src="./music/Happy Birthday To You.mp3" id="Jaudio" class="media-audio" autoplay preload loop="loop"></audio>
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>情人节快乐!</h1>
-            <h2></h2>
+            <h1>Happy Birthday, Miss C!</h1>
+            <h2>To My Little Princess</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -52,19 +52,20 @@
 
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>亲爱的陈小曦：</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>你好，陈曦！</h3>
 
-<p>首先，在这个情侣夫妻出门巡游、单身狗吃饱喝足的大好日子，我谨代表武汉大学计算机学院云计算实验室驻街道口办事处、
-北京达沃时代科技有限公司武汉研发中心饮水机管理组向远在黄石大冶金山店镇龚家铺的陈小曦女士发来节日的贺电和衷心的问候，
-祝愿您在西方国家新的爱情纪年里爱（geng）情(jia)甜(mei)蜜(ni)，幸(shan)福(dai)相(nan)伴(you)！</p>
+<p>我是老大，你现在看到的这个网站是我为你准备的一份生日礼物，希望你喜欢！:)</p>
 
-<p>然后，我以郭老大个人名义，祝他乖巧可爱萌萌哒的女朋友节(bu)日(yao)很(tai)快(xiang)乐(wo)！两情若是久长时，周末回校就相见。</p>
+<p>我是一名跑步爱好者，也是一名程序猿。所以，我想到分别以这两种方式，为你送上这份爱的礼物。</p>
 
-<p>最后，鉴于淘宝某“无良”商家未能满足我曦需求，提供量身定做的ccdd秋冬专柜正品女装时尚大气小香无袖中长修身连衣裙（名字好长%>_<%），
-临时准备了一份度假定制的小礼物，希望我曦笑纳！</p>
-<a href="./Love/rose.html"><p align="center"><img src="./images/clickme.jpg"/> </p></a>
+<p>首先，我跑过工操、奥场、桂园、国软和信操，用脚步绘制出祝福的足迹。希望把我的健康和阳光传递给你，陪伴你在新的
+一年里平安健康。</p>
 
-<p></p>
+<p align="center"><img src="./images/happy birthday.png"/> </p>
+
+<p>下面，我编写了一个程序，以程序猿的浪漫，把对你的祝福coding在代码的字里行间。</p>
+
+<p align="center"><a href="./Love/birthday.html">点击一下，就有惊喜！</a></p>
 
       </section>
 
