--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <p>然后，我以郭老大个人名义，祝他乖巧可爱萌萌哒的女朋友节(bu)日(yao)很(tai)快(xiang)乐(wo)！两情若是久长时，周末回校就相见。</p>
 
 <p>最后，鉴于淘宝某“无良”商家未能满足我曦需求，提供量身定做的ccdd秋冬专柜正品女装时尚大气小香无袖中长修身连衣裙（名字好长%>_<%），
-临时准备了一份度假定制的小礼物，希望我曦笑纳！</p>
+临时准备了一份独家定制的小礼物，希望我曦笑纳！</p>
 <a href="./Love/rose.html"><p align="center"><img src="./images/clickme.jpg"/> </p></a>
 
 <p></p>
