达成圣诞节gift

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>情人节快乐，陈小曦!</title>
+    <title>陈小圆的小院子</title>
 	<!--<embed src="./music/Happy Birthday To You.mp3" hidden="true" autostart="true" loop="true">-->
 	
   </head>
@@ -29,13 +29,13 @@
 	<source src="./music/Happy Birthday To You.mp3" type="audio/mpeg">
 	<embed hidden="true" src="./music/Happy Birthday To You.mp3" autostart="true" loop="true"/>
 	</audio>-->
-	<audio src="./music/single dog.mp3" id="Jaudio" class="media-audio" autoplay preload loop="loop"></audio>
+	<audio src="./music/jingle_bell.mp3" id="Jaudio" class="media-audio" autoplay preload loop="loop"></audio>
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>情人节快乐!</h1>
+            <h1>Merry Christmas!</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
@@ -51,18 +51,10 @@
       <span class="banner-fix"></span>
 
       <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>亲爱的陈小曦：</h3>
+<!-- <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>亲爱的陈小曦：</h3> -->
 
-<p>首先，在这个情侣夫妻出门巡游、单身狗吃饱喝足的大好日子，我谨代表武汉大学计算机学院云计算实验室驻街道口办事处、
-北京达沃时代科技有限公司武汉研发中心饮水机管理组向远在黄石大冶金山店镇龚家铺的陈小曦女士发来节日的贺电和衷心的问候，
-祝愿您在西方国家新的爱情纪年里爱（geng）情(jia)甜(mei)蜜(ni)，幸(shan)福(dai)相(nan)伴(you)！</p>
-
-<p>然后，我以郭老大个人名义，祝他乖巧可爱萌萌哒的女朋友节(bu)日(yao)很(tai)快(xiang)乐(wo)！两情若是久长时，周末回校就相见。</p>
-
-<p>最后，鉴于淘宝某“无良”商家未能满足我曦需求，提供量身定做的ccdd秋冬专柜正品女装时尚大气小香无袖中长修身连衣裙（名字好长%>_<%），
-临时准备了一份独家定制的小礼物，希望我曦笑纳！</p>
-<a href="./Love/rose.html"><p align="center"><img src="./images/clickme.jpg"/> </p></a>
+<a href="./index_christmas.html"><p align="center"><img src="./images/laodatree.png"/> </p></a>
 
 <p></p>
 
