--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <span class="banner-fix"></span>
 
       <section id="main_content">
-<!-- <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>亲爱的陈小曦：</h3> -->
+<h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>亲爱的陈小曦：</h3>
 
 <a href="./index_christmas.html"><p align="center"><img src="./images/laodatree.png"/> </p></a>
 
